fix page overflowing

--- a/styles/components/home-section.css
+++ b/styles/components/home-section.css
@@ -1,5 +1,5 @@
 .home-section {
-  width: max(36.5rem, 100%);
+  width: 100%;
 }
 
 header {
