--- a/styles/components/main-section.css
+++ b/styles/components/main-section.css
@@ -42,7 +42,6 @@
 }
 
 .main-section p {
-  width: 32rem;
   font-size: 1.4rem;
   line-height: 2rem;
 }
